relaxng-gen/tests/snapshots/build__test-attr-push.snap
---
source: relaxng-gen/tests/build.rs
expression: combined
---
--- clock/clock_choice/offset.rs ---
use crate::{Error, Result, ToXml};
use std::str::FromStr;
#[derive(Debug, Clone, PartialEq, Eq, Hash)]
pub enum Offset {
    Utc,
    Absolute,
}
impl ToXml for Offset {
    type Builder = OffsetBuilder;
    fn to_xml<W>(&self, writer: &mut quick_xml::Writer<W>) -> Result<()>
    where
        W: std::io::Write,
    {
        use quick_xml::events::{BytesEnd, BytesStart, BytesText, Event};
        match self {
            Self::Utc => {
                writer.write_event(Event::Text(BytesText::new("utc")))?;
            }
            Self::Absolute => {
                writer.write_event(Event::Text(BytesText::new("absolute")))?;
            }
        }
        Ok(())
    }
}
impl core::fmt::Display for Offset {
    fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> std::fmt::Result {
        let mut writer = quick_xml::Writer::new_with_indent(
            std::io::Cursor::new(Vec::new()),
            b' ',
            2,
        );
        self.to_xml(&mut writer).expect("Failed to generate XML");
        let res = writer.into_inner().into_inner();
        let str = String::from_utf8(res).expect("Failed to convert bytes to string");
        f.write_str(&str)
    }
}
impl Offset {
    pub fn from_xml(
        node: &roxmltree::Node,
        from_child: &mut Option<roxmltree::Node>,
    ) -> Result<Offset> {
        let mut builder = Offset::builder();
        loop {
            let Some(child) = from_child else {
                break;
            };
            match child.node_type() {
                roxmltree::NodeType::Element => {
                    match child.tag_name().name() {
                        _ => {}
                    }
                }
                roxmltree::NodeType::Text => {
                    if let Some(val) = child.text() {
                        match val {
                            "absolute" => {
                                builder.absolute()?;
                            }
                            "utc" => {
                                builder.utc()?;
                            }
                            _ => {}
                        }
                    }
                }
                _ => {}
            }
            *from_child = child.next_sibling();
            if let Ok(build) = builder.build() {
                return Ok(build);
            }
        }
        builder.build()
    }
    pub fn to_xml_attr(
        &self,
        xml_start: &mut quick_xml::events::BytesStart<'_>,
    ) -> Result<()> {
        match self {
            Self::Utc => {}
            Self::Absolute => {}
        }
        Ok(())
    }
    pub fn is_empty(&self) -> bool {
        self.to_string().is_empty()
    }
}
impl FromStr for Offset {
    type Err = Error;
    fn from_str(s: &str) -> Result<Self> {
        let mut builder = Self::builder();
        match s {
            "absolute" => {
                builder.absolute()?;
            }
            "utc" => {
                builder.utc()?;
            }
            other => {
                dbg!(other);
            }
        }
        builder.build()
    }
}
#[derive(Default, Debug, Clone, PartialEq, Eq, Hash)]
pub struct OffsetBuilder {
    utc: Option<()>,
    absolute: Option<()>,
}
impl OffsetBuilder {
    pub fn utc(&mut self) -> Result<&mut Self> {
        self.utc = Some(());
        Ok(self)
    }
    pub fn absolute(&mut self) -> Result<&mut Self> {
        self.absolute = Some(());
        Ok(self)
    }
    pub fn build(&self) -> Result<Offset> {
        if self.utc.is_some() {
            return Ok(Offset::Utc);
        }
        if self.absolute.is_some() {
            return Ok(Offset::Absolute);
        }
        Err(Error::BuilderVariant("Offset"))
    }
}

--- clock/clock_choice.rs ---
use crate::{Error, Result, ToXml};
use std::str::FromStr;
pub mod offset;
use offset::Offset;
#[derive(Debug, Clone, PartialEq, Eq, Hash)]
pub enum ClockChoice {
    Offset(Offset),
    #[doc = "/ref[@name='clock']/element[@name='clock'][1]/choice[1]/group[1]"]
    Variant0 { start: u64 },
}
impl ToXml for ClockChoice {
    type Builder = ClockChoiceBuilder;
    fn to_xml<W>(&self, writer: &mut quick_xml::Writer<W>) -> Result<()>
    where
        W: std::io::Write,
    {
        use quick_xml::events::{BytesEnd, BytesStart, BytesText, Event};
        match self {
            Self::Offset(offset) => {
                let elem = offset;
            }
            Self::Variant0 { start } => {}
        }
        Ok(())
    }
}
impl core::fmt::Display for ClockChoice {
    fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> std::fmt::Result {
        let mut writer = quick_xml::Writer::new_with_indent(
            std::io::Cursor::new(Vec::new()),
            b' ',
            2,
        );
        self.to_xml(&mut writer).expect("Failed to generate XML");
        let res = writer.into_inner().into_inner();
        let str = String::from_utf8(res).expect("Failed to convert bytes to string");
        f.write_str(&str)
    }
}
impl ClockChoice {
    pub fn from_xml(
        node: &roxmltree::Node,
        from_child: &mut Option<roxmltree::Node>,
    ) -> Result<ClockChoice> {
        let mut builder = ClockChoice::builder();
        if let Some(val) = node.attribute("offset") {
            builder.offset(Offset::from_str(val)?)?;
        }
        if let Some(val) = node.attribute("start") {
            builder
                .start(
                    val
                        .parse::<u64>()
                        .map_err(|e| Error::ParseError("start", Box::new(e)))?,
                )?;
        }
        loop {
            let Some(child) = from_child else {
                break;
            };
            match child.node_type() {
                roxmltree::NodeType::Element => {
                    match child.tag_name().name() {
                        _ => {}
                    }
                }
                roxmltree::NodeType::Text => {
                    if let Some(val) = child.text() {
                        match val {
                            _ => {}
                        }
                    }
                }
                _ => {}
            }
            *from_child = child.next_sibling();
        }
        builder.build()
    }
    pub fn to_xml_attr(
        &self,
        xml_start: &mut quick_xml::events::BytesStart<'_>,
    ) -> Result<()> {
        match self {
            Self::Offset(offset) => {
                let elem = offset;
                {
                    let elem = offset;
                    xml_start
                        .push_attribute((
                            &b"offset"[..],
                            quick_xml::escape::escape(&elem.to_string()).as_bytes(),
                        ));
                }
            }
            Self::Variant0 { start } => {
                xml_start
                    .push_attribute((
                        &b"offset"[..],
                        quick_xml::escape::escape("absolute").as_bytes(),
                    ));
                let elem = start;
                {
                    let elem = start;
                    xml_start
                        .push_attribute((
                            &b"start"[..],
                            quick_xml::escape::escape(&elem.to_string()).as_bytes(),
                        ));
                }
            }
        }
        Ok(())
    }
    pub fn is_empty(&self) -> bool {
        self.to_string().is_empty()
    }
}
#[derive(Default, Debug, Clone, PartialEq, Eq, Hash)]
pub struct ClockChoiceBuilder {
    offset: Option<Offset>,
    start: Option<u64>,
}
impl ClockChoiceBuilder {
    pub fn offset<T>(&mut self, offset: T) -> Result<&mut Self>
    where
        T: TryInto<Offset>,
        Error: From<<T as TryInto<Offset>>::Error>,
    {
        self.offset = Some(offset.try_into()?);
        Ok(self)
    }
    pub fn start<T>(&mut self, start: T) -> Result<&mut Self>
    where
        T: TryInto<u64>,
        Error: From<<T as TryInto<u64>>::Error>,
    {
        self.start = Some(start.try_into()?);
        Ok(self)
    }
    pub fn build(&self) -> Result<ClockChoice> {
        if matches!(self.offset, Some(Offset::Absolute)) && self.start.is_some() {
            return Ok(ClockChoice::Variant0 {
                start: Clone::clone(self.start.as_ref().unwrap()).into(),
            });
        }
        if self.offset.is_some() {
            return Ok(ClockChoice::Offset(Clone::clone(&self.offset.as_ref().unwrap())));
        }
        Err(Error::BuilderVariant("ClockChoice"))
    }
}

--- clock.rs ---
//!`clock` module
use crate::{Error, Result, ToXml};
use std::str::FromStr;
pub mod clock_choice;
use clock_choice::ClockChoice;
///`<clock/>` element
#[derive(Debug, Clone, PartialEq, Eq, Hash)]
pub struct Clock {
    pub clock_choice: ClockChoice,
}
impl ToXml for Clock {
    type Builder = ClockBuilder;
    fn to_xml<W>(&self, writer: &mut quick_xml::Writer<W>) -> Result<()>
    where
        W: std::io::Write,
    {
        use quick_xml::events::{Event, BytesStart, BytesEnd, BytesText};
        let mut xml_start = BytesStart::new("clock");
        {
            let elem = &self.clock_choice;
            elem.to_xml_attr(&mut xml_start)?;
        }
        let empty = {
            true
                && ({
                    let elem = &self.clock_choice;
                    elem.is_empty()
                })
        };
        if empty {
            writer.write_event(Event::Empty(xml_start))?;
        } else {
            writer.write_event(Event::Start(xml_start))?;
            {
                let elem = &self.clock_choice;
                elem.to_xml(writer)?;
            }
            writer.write_event(Event::End(BytesEnd::new("clock")))?;
        }
        Ok(())
    }
}
impl Clock {
    pub fn from_xml(node: &roxmltree::Node) -> Result<Self> {
        let mut builder = Self::builder();
        for child in node.children() {
            match child.tag_name().name() {
                _ => continue,
            }
        }
        if let Some(val) = node.text() {
            match val {
                _ => {}
            }
        }
        let child = &mut node.first_child();
        if let Ok(val) = ClockChoice::from_xml(node, child) {
            builder.clock_choice(val)?;
        }
        builder.build()
    }
}
impl core::fmt::Display for Clock {
    fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> std::fmt::Result {
        let mut writer = quick_xml::Writer::new_with_indent(
            std::io::Cursor::new(Vec::new()),
            b' ',
            2,
        );
        self.to_xml(&mut writer).expect("Failed to generate XML");
        let res = writer.into_inner().into_inner();
        let str = String::from_utf8(res).expect("Failed to convert bytes to string");
        f.write_str(&str)
    }
}
///`<clock/>` builder
#[derive(Default, Debug, Clone, PartialEq, Eq, Hash)]
pub struct ClockBuilder {
    pub clock_choice: Option<ClockChoice>,
}
impl ClockBuilder {
    pub fn clock_choice<T>(&mut self, clock_choice: T) -> Result<&mut Self>
    where
        T: TryInto<ClockChoice>,
        Error: From<<T as TryInto<ClockChoice>>::Error>,
    {
        self.clock_choice = Some(clock_choice.try_into()?);
        Ok(self)
    }
    /**
            Attempt to build [`Clock`].

            If the element is not valid, an error is returned.
            */
    pub fn build(&self) -> Result<Clock> {
        let clock_choice = Clone::clone(
            self
                .clock_choice
                .as_ref()
                .ok_or(Error::BuilderMissingField("clock", "clock_choice"))?,
        );
        Ok(Clock { clock_choice })
    }
}

--- lib.rs ---
#![doc = concat!(
    "Generated from ",
    "'/home/elmarco/src/relaxng-rust/relaxng-gen/tests/fixtures/attr-push.rng'",
    " schema."
)]
#![allow(dead_code)]
#![allow(unused_mut)]
#![allow(unused_variables)]
#![allow(unused_imports)]
use thiserror::Error;
pub mod clock;
pub use clock::*;
/// The error type used by this crate.
#[derive(Error, Debug)]
pub enum Error {
    #[error("IO error: {0}")]
    Io(#[from] std::io::Error),
    #[error("From UTF-8 error: {0}")]
    FromUtf8Error(#[from] std::string::FromUtf8Error),
    #[error("{0} builder is missing mandatory field: {1}")]
    BuilderMissingField(&'static str, &'static str),
    #[error("{0} builder cannot build a variant")]
    BuilderVariant(&'static str),
    #[error("String too short, expected at least {0} characters, got {1}")]
    TooShort(usize, usize),
    #[error("String too long, expected at most {0} characters, got {1}")]
    TooLong(usize, usize),
    #[error("String '{1}' does not match pattern '{0}'")]
    PatternMismatch(&'static str, String),
    #[error("Failed to compile regex: {0}")]
    RegexError(#[from] regex::Error),
    #[error("Failed to parse '{0}': {1}")]
    ParseError(
        &'static str,
        #[source]
        Box<dyn std::error::Error + Send + Sync + 'static>,
    ),
}
impl From<std::convert::Infallible> for Error {
    fn from(_: std::convert::Infallible) -> Self {
        unreachable!("Infallible error should not occur")
    }
}
/// Helper trait for this crate XML types.
pub trait ToXml {
    /// The associated builder type.
    type Builder: Default;
    /// Creates a new builder for this type.
    fn builder() -> Self::Builder {
        Self::Builder::default()
    }
    /// Writes Events to a XML writer.
    fn to_xml<W>(&self, writer: &mut quick_xml::Writer<W>) -> Result<()>
    where
        W: std::io::Write;
}
#[doc(hidden)]
pub trait RegexPattern {
    const REGEX: &'static str;
}
#[doc(hidden)]
#[derive(Debug, Clone, Copy, PartialEq, Eq, Hash)]
pub struct NoPattern;
impl RegexPattern for NoPattern {
    const REGEX: &'static str = "";
}
/// A string type with length constraints and optional runtime regex validation.
#[derive(Debug, Clone, PartialEq, Eq, Hash)]
pub struct ConstrainedString<
    const MIN_LEN: usize,
    const MAX_LEN: usize,
    P: RegexPattern = NoPattern,
> {
    value: String,
    _phantom: std::marker::PhantomData<P>,
}
impl<
    const MIN: usize,
    const MAX: usize,
    P: RegexPattern,
> ConstrainedString<MIN, MAX, P> {
    pub const NO_MIN_CONSTRAINT: usize = 0;
    pub const NO_MAX_CONSTRAINT: usize = usize::MAX;
    pub fn try_new(value: impl Into<String>) -> Result<Self> {
        let s = value.into();
        Self::validate(&s)?;
        Ok(Self {
            value: s,
            _phantom: std::marker::PhantomData,
        })
    }
    fn validate(s: &str) -> Result<()> {
        fn get_compiled_regex(pattern: &'static str) -> Result<regex::Regex> {
            /// Registry for compiled regex patterns
            static REGEX_REGISTRY: std::sync::OnceLock<
                std::sync::Mutex<std::collections::HashMap<&'static str, regex::Regex>>,
            > = std::sync::OnceLock::new();
            if pattern.is_empty() {
                return Ok(regex::Regex::new(".*").unwrap());
            }
            let registry = REGEX_REGISTRY
                .get_or_init(|| std::sync::Mutex::new(std::collections::HashMap::new()));
            let mut map = registry.lock().unwrap();
            if let Some(regex) = map.get(pattern) {
                return Ok(regex.clone());
            }
            match regex::Regex::new(pattern) {
                Ok(regex) => {
                    let result = regex.clone();
                    map.insert(pattern, regex);
                    Ok(result)
                }
                Err(e) => Err(Error::RegexError(e)),
            }
        }
        if MIN > Self::NO_MIN_CONSTRAINT && s.len() < MIN {
            return Err(Error::TooShort(MIN, s.len()));
        }
        if MAX < Self::NO_MAX_CONSTRAINT && s.len() > MAX {
            return Err(Error::TooLong(MAX, s.len()));
        }
        if !P::REGEX.is_empty() {
            let regex = get_compiled_regex(P::REGEX)?;
            if !regex.is_match(s) {
                return Err(Error::PatternMismatch(P::REGEX, s.to_string()));
            }
        }
        Ok(())
    }
    /// Returns the string as a `&str`.
    #[must_use]
    pub fn as_str(&self) -> &str {
        &self.value
    }
    /// Converts the constrained string into a `String`, consuming it.
    #[must_use]
    pub fn into_string(self) -> String {
        self.value
    }
}
impl<const MIN: usize, const MAX: usize, P: RegexPattern> std::ops::Deref
for ConstrainedString<MIN, MAX, P> {
    type Target = str;
    fn deref(&self) -> &Self::Target {
        &self.value
    }
}
impl<const MIN: usize, const MAX: usize, P: RegexPattern> std::fmt::Display
for ConstrainedString<MIN, MAX, P> {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{}", self.value)
    }
}
impl<const MIN: usize, const MAX: usize, P: RegexPattern> AsRef<str>
for ConstrainedString<MIN, MAX, P> {
    fn as_ref(&self) -> &str {
        &self.value
    }
}
impl<const MIN: usize, const MAX: usize, P: RegexPattern> std::str::FromStr
for ConstrainedString<MIN, MAX, P> {
    type Err = Error;
    fn from_str(s: &str) -> Result<Self> {
        Self::try_new(s)
    }
}
impl<const MIN: usize, const MAX: usize, P: RegexPattern> TryFrom<&str>
for ConstrainedString<MIN, MAX, P> {
    type Error = Error;
    fn try_from(s: &str) -> Result<Self> {
        Self::try_new(s)
    }
}
/// A specialized Result type where the error is hard-wired to [`enum@Error`].
pub type Result<T, E = Error> = std::result::Result<T, E>;

--- main.rs ---
use std::path::Path;
use std::{env::args, fs};
fn main() {
    let path = args().nth(1).expect("No XML file path provided");
    let xml_path = Path::new(&path);
    let xml = fs::read_to_string(xml_path).expect("Failed to read test XML file");
    let xml = roxmltree::Document::parse(&xml).expect("Failed to parse XML");
    let root = xml.root().first_child().expect("No root element found");
    let res = test_attr_push::Clock::from_xml(&root).unwrap();
    let res = res.to_string();
    println!("{}", res);
}
